--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,111 +1,85 @@
 @import "css/normalize.css";
 
-/* overall */
-
 html {
     font-size: 100%;
+    color: #c7d5e0;
     margin: 0 auto;
     width: auto;
     max-width: 20rem;
     background-color: #c7d5e0;
     font-family: 'PT Serif', serif;
-    height: auto; 
 }
 
-/*  dividing line */
-
-#line {
-    background-color: #c7d5e8;
-    margin: 0.5rem;
-}
-
-/* body */
-
-body {
+.header {
     background-color: #1b2838;
-    color: #c7d5e0;
-    margin: 0 auto;
-    height: auto;
-}
-
-/* header */
-
-header {
-    background-color: #1b2838;
-    color: #c7d5e0;
-    margin: 0 auto;
-    height: auto;
-    max-height: 8rem;
-    padding: 0.5rem;
+    padding: 0;
+    margin: 0;
+    max-height: 9rem;
+    border-radius: 0.7rem;
 }
 
 #title_1 {
     font-size: 2.4rem;
     position: relative;
     left: 7rem;
-    top: -8.5rem;
-    margin: auto;
+    top: -9rem;
+    margin: 0；
 }
 
 #title_2 {
     font-size: 1.2rem;
     position: relative;
     left: 7rem;
-    top: -11rem;
-    margin: auto;
+    top: -11.5rem;
+    margin: 0；
 }
 
-/* nav */
-
-#nav {
+.nav {
     background-color: #1b2838;
-    margin: 0 auto;
-    height: auto;
-    padding: 0.5rem;
-    position: relative;
-    top: 10rem;
+    margin: 1rem 0;
+    border-radius: 0.7rem;
 }
 
-/* main */
-
-main {
-    margin: 0 auto;
-    padding: 0.5rem;
+hr {
+    height: 0.2rem;
+    background-color: rgb(199,213,224,0.7);
+    margin: 0;
 }
 
-main p {
-    color: #c7d5e0;
-    padding: 1rem 0.25rem;
-    margin: 0 auto;
+.main {
+    background-color: #1b2838;
+    margin: 1rem 0;
+    border-radius: 0.7rem;
+}
+
+.main p {
+    margin: 0;
+    padding: 1.5rem 0 1rem 1rem;
 }
 
 #rainbow {
     text-align: center;
+    margin: 0;
+    padding: 0.5rem 0;
 }
 
-.main_body {
-    border-radius: 4rem !important;
-}
-/* footer */
-
-footer {
-    background-color: #1b2838;
-    padding: 0.5rem;
+.footer {
+    background-color: #1b2838; 
+    margin: 1rem 0;
+    padding: 0.6rem 0;
+    border-radius: 0.7rem;
 }
 
-footer p {
-    color: #c7d5e0;
-    padding: 0.5rem;
-    margin: auto;
+.footer p {
+    padding: 0 1rem;
+    margin: 0;
 }
-
-/* Links */
 
 a:link {
     color: #c7d5e0;
     text-decoration: underline;
     display: block;
-    padding: 0.6rem;
+    padding: 1rem;
 }
 
 a:visited {
@@ -121,12 +95,4 @@ a:hover {
 a:active {
     color: #c7d5e0;
     text-decoration: none;
-}
-
-/*  dividing line */
-
-hr {
-    background-color: #c7d5e0;
-    margin: 0;
-    border: solid 0.5rem #c7d5e0;
 }
