--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -16,6 +16,7 @@ html {
     margin: 0;
     max-height: 9rem;
     border-radius: 0.7rem;
+    box-shadow: 0.6rem 0.6rem 0.3rem #888888;
 }
 
 #title_1 {
@@ -38,6 +39,7 @@ html {
     background-color: #1b2838;
     margin: 1rem 0;
     border-radius: 0.7rem;
+    box-shadow: 0.6rem 0.6rem 0.3rem #888888;
 }
 
 hr {
@@ -50,11 +52,12 @@ hr {
     background-color: #1b2838;
     margin: 1rem 0;
     border-radius: 0.7rem;
+    box-shadow: 0.6rem 0.6rem 0.3rem #888888;
 }
 
 .main p {
     margin: 0;
-    padding: 1.5rem 0 1rem 1rem;
+    padding: 0.7rem 1rem 0.7rem 1rem;
 }
 
 #rainbow {
@@ -63,11 +66,31 @@ hr {
     padding: 0.5rem 0;
 }
 
+ul {
+    margin: 0;
+    padding: 0.5rem 1rem 0.5rem 1rem;
+}
+
+ul p {
+    padding: 0.5rem 1rem 0.5rem 1rem;
+    margin: 0;
+}
+
+li {
+    margin: 0 1rem;
+    padding: 0;
+}
+
+#name {
+    font-size: 2rem;
+}
+
 .footer {
     background-color: #1b2838; 
     margin: 1rem 0;
     padding: 0.6rem 0;
     border-radius: 0.7rem;
+    box-shadow: 0.6rem 0.6rem 0.3rem #888888;
 }
 
 .footer p {
